Layout bugs fixes

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -34,6 +34,15 @@ h1:hover > a.headerlink:hover, h2:hover > a.headerlink:hover, h3:hover > a.heade
   text-decoration: none !important;
 }
 
+body {
+  font-size: 16px !important;
+  color: #171717 !important;
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, body {
+  display: block;
+}
+
 a.img-link.public-integration {
   border: 0;
   display: inline-block;
@@ -53,11 +62,11 @@ ul {
   padding-bottom: 1rem;
 }
 
-ul li {
+.col-body ul li {
   margin-bottom: 0.25rem;
 }
 
-ol li {
+.col-body ol li {
   margin-bottom: 0.25rem;
 }
 
@@ -70,7 +79,7 @@ dd {
 }
 
 p {
-  color: #171717 !important;
+  color: #171717;
   font-size: 16px;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -138,15 +147,6 @@ p.topic-title {
   color: #171717;
 }
 
-body {
-  font-size: 16px !important;
-  color: #171717 !important;
-}
-
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, body {
-  display: block;
-}
-
 .section img {
   margin: 0 0 1rem 0;
   filter: drop-shadow(0 5px 5px #ccc);
@@ -158,7 +158,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, 
   background: none !important;
 }
 
-.highlight-default, .highlight-javascript, .highlight-html, .highlight-css {
+.highlight-default, .highlight-json, .highlight-javascript, .highlight-html, .highlight-css {
   border-left: 2px solid #dee2e6;
 }
 
